tests/bigint/invalid09.js
const invalid_e = 2e9n; // error
